welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:42: error: '<-' expected but ')' found.
      for (depX<6){
                 ^ZigZag:53: error: illegal start of simple expression
    }else if (MurADroite) {
    ^